--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .App {
-  text-align: center;
+  justify-content: center;
 }
 
 .App-logo {
@@ -8,6 +8,7 @@
 }
 
 .App-header {
+  
   background-color: #222;
   height: 75px;
   padding: 20px;
