--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,69 @@
+/* GENERAL LAYOUT */
 .App {
-  justify-content: center;
-  font-family: "Courier New", Courier, monospace
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100vh;
+  background: #fafbfc;
 }
 
+.App-container {
+  background: white;
+  border-right: #e1e4e8 1px solid;
+  border-left: #e1e4e8 1px solid;
+
+  width: 100%;
+  max-width: 450px;
+  height: 100%;
+  
+  padding: 50px 15px 0 15px;
+  
+  align-self: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.line {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  padding-bottom: 10px;
+}
+
+/* FORM STYLING */
+.forms {
+  width: 100%;
+  padding-bottom: 35px;
+}
+
+form {
+  width: 100%;
+}
+
+input[type=number] {
+  background: #fafbfc;
+  border: #e1e4e8 1px solid;
+  border-radius: 5px;
+  padding: 5px;
+  max-width: 65px;
+}
+
+form .line { 
+  padding-bottom: 10px;
+}
+
+/* HEADER STYLING */
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 80px;
 }
 
 .App-header {
-  
+  display: flex;
+  align-items: flex-end;
+  justify-content: center;
+
   background-color: #222;
   height: 75px;
   padding: 20px;
@@ -18,14 +72,14 @@
 
 .App-title {
   font-size: 1.5em;
+  text-align: center;
 }
 
 .App-intro {
   font-size: large;
 }
 
-
-
+/* ANIMATION */
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
